--- a/style.css
+++ b/style.css
@@ -18,3 +18,15 @@ body{
     width: 90%;
     max-width: 600px;
 }
+button{
+    background-color: var(--cor-secundaria);
+    color: var(--cor-texto);
+    border: none;
+    border-radius: 15px;
+    padding: 15px;
+    transition: background-color 0.5s;
+}
+button:hover{
+    background-color: var(--cor-destaque);
+    color: var(--cor-principal);
+}
